adding a list of webpages

--- a/index.html
+++ b/index.html
@@ -2,5 +2,10 @@
 <html>
 <body>
     Test
+
+    <ol>
+        <li><a href="my_class_stream/">my class stream (basic html)</a> </li>
+        <li><a href="favorite _thing/">favorite things about school (hw1, basic html)</a>
+    </ol>
 </body>
 </html>
