--- a/multipage_website/index.html
+++ b/multipage_website/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
     <ol>
+        <li><a href="index.html">Go to index.html</a> </li>
         <li><a href="otherpage.html">Go to other page</a> </li>
         <li><a href="otherpage2.html">Go to other page 2</a>
     </ol>
