--- a/multipage_website/otherpage.html
+++ b/multipage_website/otherpage.html
@@ -3,6 +3,7 @@
 <body>
     <ol>
         <li><a href="index.html">Go to index.html</a> </li>
+        <li><a href="otherpage.html">Go to other page</a> </li>
         <li><a href="otherpage2.html">Go to other page 2</a>
     </ol>
 </body>
