--- a/multipage_website/otherpage2.html
+++ b/multipage_website/otherpage2.html
@@ -2,8 +2,9 @@
 <html>
 <body>
     <ol>
-        <li><a href="otherpage.html">Go to other page</a> </li>
         <li><a href="index.html">Go to index page</a>
+        <li><a href="otherpage.html">Go to other page</a> </li>
+            <li><a href="otherpage2.html">Go to other page 2</a>
     </ol>
 </body>
 </html>
