adding title to multipage website

--- a/multipage_website/index.html
+++ b/multipage_website/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Trial run of my MA multipage</title>
+    </head>
 <body>
     <ol>
         <li><a href="index.html">Go to index.html</a> </li>
