--- a/multipage_website/index.html
+++ b/multipage_website/index.html
@@ -4,10 +4,18 @@
         <title>Trial run of my MA multipage</title>
     </head>
 <body>
-    <ol>
+ <!---  <ol>
         <li><a href="index.html">Go to index.html</a> </li>
         <li><a href="otherpage.html">Go to other page</a> </li>
         <li><a href="otherpage2.html">Go to other page 2</a>
     </ol>
+-->
+<table>
+    <tr>
+        <td><a href="index.html">Go to index.html</a></td>
+    </tr>
+    <tr><a href="otherpage.html">Go to other page</a></tr>
+    <tr><a href="otherpage2.html">Go to other page 2</a></tr>
+</table>
 </body>
 </html>
