--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
     <ol>
         <li><a href="my_class_stream/">my class stream (basic html)</a> </li>
-        <li><a href="favorite _thing/">favorite things about school (hw1, basic html)</a>
+        <li><a href="favorite _thing/">favorite things about school (hw1, basic html)</a>]
+        <li><a href="multipage_website/index.html">mulitpage website (basic html) </a></li>
     </ol>
 </body>
 </html>
