adding images to my genius project

--- a/my genius/html/gallery.html
+++ b/my genius/html/gallery.html
@@ -19,25 +19,25 @@
 <div class=".container"></div>
 <body>
     <h1 style="color:rgb(187, 187, 254)">☆ Photo Gallery!! ☆</h1>
-<h2 style="color:rgb(56, 106, 232)"> ☆20 photos from some of my favorite moments this year☆</h2>
-<img src= width="300px" height="400px">
-<img src= width="300px" height="400px">
-<img src= width="300px" height="400px">
-<img src= width="300px" height="400px">
-<img src= width="300px" height="400px">
-<img src= width="300px" height="400px">
-<img src= width="300px" height="400px">
-<img src= width="300px" height="400px">
-<img src= width="300px" height="400px">
-<img src= width="300px" height="400px">
-<img src= width="300px" height="400px">
-<img src= width="300px" height="400px">
+<h2 style="color:rgb(56, 106, 232)"> ☆12 Photos from my travels from 2020-2023!☆</h2>
+<img src="images/travel_10.jpg" width="300px" height="400px">
+<img src="images/travel_11.jpg" width="300px" height="400px">
+<img src="images/travel_12.jpg" width="300px" height="400px">
+<img src="images/travel_5.JPG" width="300px" height="400px">
+<img src="images/travel_6.JPG" width="300px" height="400px">
+<img src="images/travel_7.JPG" width="300px" height="400px">
+<img src="images/travel_8.jpg" width="300px" height="400px">
+<img src="images/travel_9.jpg" width="300px" height="400px">
+<img src="images/travel_13.jpg" width="300px" height="400px">
+<img src="images/travel_14.jpg" width="300px" height="400px">
+<img src="images/travel_15.JPG" width="300px" height="400px">
+<img src="images/travel_16.jpg" width="300px" height="400px">
 </body>
 </html>
 
 <style>
     .body {
-    background-color: lightblue;
+    background-color: rgb(153, 208, 243);
 }
 .container {
 width: 800px;
