--- a/my genius/html/index.html
+++ b/my genius/html/index.html
@@ -16,13 +16,44 @@
                 </div>
 </head>
 <body>
-    
+</ul>
+</div>
+<h1 style="color:rgb(152, 152, 240) ">☆ My Genius: Traveling! ☆</h1>
+
+<div class=".container" style="text-align: center;">
+<body class="body">
+<h2 style="color:rgb(56, 106, 232)">Hi!! I'm Sabina and I want to talk to you all about the ways I have traveled, and how you can maximize your vacation time soon!☆ 
+  <h3 style="color:rgb(56, 106, 232)">The following list includes different cities and countries I have traveled to: </h3>  
+ <ul style="color:rgb(124, 124, 182)">
+   <li> Paris, France</li>
+  <li> Florence, Italy</li>
+   <li> Reykjavik, Iceland</li> 
+   <li> Cabo, Mexico</li> 
+   <li>  Amsterdam, Holland </li> 
+   <li>  Melbourne, Australia </li> 
+   <li>  Islamabad, Pakistan </li> 
+   <li> Istanbul, Turkiye </li> 
+   <li> London, United Kingdom </li> 
+   <li>  Brussels, Belgium</li> 
+   <li> Vienna, Austria</li> 
+   <li> Montreal, Canada</li> 
+   <li> Zurich, Switzerland</li> 
+   <li> Rio de Janerio, Brazil </li> 
+   <li>New York, New York</li> 
+ </ul>
+ </div>
+<h2 style="color:rgb(152, 152, 240)"> ☆ These are some photos from my lastest travels! ☆</h2>
+<img src="images/travel_1.jpg" width="300px" height="400px">
+<img src="images/travel_2.jpg" width="300px" height="400px">
+<img src="images/travel_3.jpg" width="300px" height="400px">
+<img src="images/travel_4.jpg" width="300px" height="400px">
+
 </body>
 </html>
 
 <style>
     .body {
-    background-color: lightblue;
+    background-color: rgb(153, 208, 243);
 }
 .container {
 width: 800px;
