editing web project

--- a/my genius/html/contact.html
+++ b/my genius/html/contact.html
@@ -15,16 +15,27 @@
             </ul>
                 </div>
 </head>
+<div class=".container">
 <body>
+    <h1 style="color:rgb(187, 187, 254)">☆ Contact Me!! ☆</h1>
+    <h2 style="color:rgb(56, 106, 232) "> ☆ My emails is sahmed@eastsideprep.org ☆ (School) </h2>
+    <h2 style="color:rgb(56, 106, 232)"> ☆ My other email is sabina@ahmed.com ☆ (Personal) </h2>
+    <h2 style="color:rgb(56, 106, 232)"> Also If you are looking for travel references or some trip ideas, here are some links to videos you can watch to help you!</h2>
+    <a style="color:rgb(56, 106, 232)" href="https://www.youtube.com/@maiphammy">Mai Pham: She has a lot of videos centered about traveling to many different countries in Asia! <a>
+      <p><a style="color:rgb(56, 106, 232)" href="https://www.youtube.com/@fernandaraamirez">Fernanda Ramirez: She has a lot of info on want to pack and how to prep for different vacations!!</a></p>
+      <img src="images/phone_image1.webp">
+            <body>
+</div>
     
+    </body>   
 </body>
 </html>
 
 <style>
     .body {
-    background-color: lightblue;
+    background-color: rgb(118, 202, 230); 
 }
-.container {
+.container{
 width: 800px;
 margin: 0 auto;  
 border: 50 px #b8b1e8;
@@ -38,4 +49,4 @@ background-color: lightpink;
     display: inline;
     margin-right: 75px;
     }
-</style>
+</style >
