adding fonts matter to index,html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="favorite _thing/index.html"> First HW </a>
-    <a href="multipage_website/index.html">How to make nav bar</a>
-    <a href="fonts_matter/">Using different fonts family </a>
-    <a href="my genius/html/index.html">First MA Project</a>
+    <p><a href="favorite _thing/index.html"> First HW </a></p>
+
+    <p><a href="multipage_website/index.html">How to make nav bar</a></p>
+
+    <p><a href="fonts_matter/">Using different fonts family </a></p>
+    
+  <p><a href="my genius/html/index.html">First MA Project</a></p>
 </body>
 </html>
