--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Projects Home Paage</title>
 </head>
 <body>
     <p><a href="favorite _thing/index.html"> First HW </a></p>
@@ -11,7 +11,7 @@
     <p><a href="multipage_website/index.html">How to make nav bar</a></p>
 
     <p><a href="fonts_matter/">Using different fonts family </a></p>
-    
+
   <p><a href="my genius/html/index.html">First MA Project</a></p>
 </body>
 </html>
