--- a/my genius/html/about.html
+++ b/my genius/html/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Genius: </title>
+        <title>My Genius: Traveling!! </title>
         <link rel="stylesheet" href="css/style.css">
         <div class="container">
             <ul class="nav"> 
@@ -14,12 +14,69 @@
             <li><a href="contact.html">Contact</a></li>
             </ul>
                 </div>
+
+                <div class="container" text-align="center">
 </head>
 <body>
-    
+    <h1 style="color:rgb(187, 187, 254)">☆ About Traveling!! ☆</h1>
+    <h2 style="color:rgb(56, 106, 232)"> ☆First off: Packing!☆</h2>
+    <p>When packing, you want to make sure you pack for the weather, and also for how long you are going to be there.  </p>
+     <h3 style="color: rgb(118, 95, 201);">Sample packing list for tropical vacation:</h3>   
+     <ul>
+        <li>Swimsuit(s)</li>
+        <li> X pairs of clothes</li>
+        <li>Sun glasses</li>
+        <li>Sun screen</li>
+        <li>Toiletries</li>
+        <li>Tooth brush and toothpaste</li>
+        <li> Flipflops or Sandals</li>
+        <li>Hairbrush</li>
+        <li>Summer Dresses/Shorts</li>
+        <li>Bug spray</li>
+</ul>
+<img src="images/tropical1.jpg" text-align="center" width="300px" height="400px">
+<h3 style="color: rgb(118, 95, 201);"> A packing list for a snowy/winter vacation might look for like this:</h3>  
+   <ul>
+    <li>Snow shoes</li>
+    <li>Winter hat</li>
+    <li>Scarf</li>
+    <li>Gloves</li>
+    <li>Heavy coat</li>
+    <li>Many layers</li>
+    <li>Snow pants</li>
+    <li>Hand warmers</li>
+    <li>Thermoflasks</li>
+    <li>Earmuffs</li>
+   </ul> 
+   <img src="images/snowy1.jpg" text-align="center"width="300px" height="400px">
+   <h2 style="color:rgb(56, 106, 232)"> ☆Now Activity Planning!☆</h2>
+ <p style="color: rgba(91, 116, 245, 0.836);">During your trip you want to start off with a rough schedule of your plane rides and car rides between cities and countries</p>
+   <h3 style="color: rgb(118, 95, 201);"> here is an example schedule:</h3>
+   <ul>
+    <li>September 5: Fly to London</li>
+    <li>September 6: Arrive at Heathrow Airport</li>
+    <li> September 6: Heathrow Airport -> Four Seasons</li>
+    <li> September 7: Drive to Cambridge</li>
+    <li>September 7-9: Stay in Cambridge</li>
+    <li>September 9: Train back to London</li>
+    <li> September 9-10: Stay in London</li>
+    <li>September 10: Fly to Paris, France</li>
+    <li>September 10: Arrive in Paris Airport</li>
+    <li> Septemeber 10: Paris Airport -> Hilton</li>
+    <li>September 10-12: Stay in Paris</li>
+    <li>September 12: Train to Cannes</li>
+    <li>September 12-14: Stay in Cannes</li>
+    <li>Setember 14: Train to Lyon</li>
+    <li>September 14-16: Stay in Lyon</li>
+    <li>September 16: Train back to Paris</li>
+    <li>September 17: Hilton -> Paris Airport</li>
+    <li> September 17: Fly back to Seattle</li>
+    <li> September 18: Arrive back in Seattle</li>
+   </ul>
+   <p style="color: rgb(118, 95, 201);"> DISCLAIMER: Your trip doesn' need to be as detailed as this, or as long either. Its just good to have a few dates for travel set beforehand, to better plan your trips!!</p>
 </body>
+</div>
 </html>
-
 <style>
     .body {
     background-color: lightblue;
