--- a/my genius/html/index.html
+++ b/my genius/html/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Genius: </title>
+        <title>My Genius: Traveling!! </title>
         <link rel="stylesheet" href="css/style.css">
         <div class="container">
             <ul class="nav"> 
