--- a/my genius/html/resource.html
+++ b/my genius/html/resource.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Genius: </title>
+        <title>My Genius: Traveling!! </title>
         <link rel="stylesheet" href="css/style.css">
         <div class="container">
             <ul class="nav"> 
@@ -15,14 +15,29 @@
             </ul>
                 </div>
 </head>
+<div class="container">
 <body>
-    h1 style="color:rgb(152, 152, 240) ">☆ Resources!! ☆</h1>
+    <h1 style="color:rgb(152, 152, 240) ">☆ Resources!! ☆</h1>
+    <h2 style="color:rgb(56, 106, 232)"> Here are some resources I have used!! ☆</h2>   
+    <h3 style="color: rgb(118, 95, 201);"> For Packing help: </h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/c34Jz-QbMfA?si=9tUgXh203UQKQnTB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <p style="color: rgb(137, 114, 158);">This is packing for cold weather!!</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/jzcOqr2m8R0?si=dJ6ywHl5f1OYmrUr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <p style="color: rgb(125, 106, 142);">This is packing for tropical vacations!</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/LEmQzCBSdhE?si=mR7hw3qzbLjg12R_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p style="color: rgb(117, 111, 161);">This is packing in general!!</p> 
+        <h3 style="color: rgb(118, 95, 201);"> For Scheduling help and activity planning: </h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-r4ZBVPfjAU?si=yNK4pSkMQYsKpsYS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p style="color: rgb(137, 114, 158);">For general planning (budgeting, tickets, etc.)</p>   
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gsD1iEqkkRA?si=ydxzVi30syDMEsd5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <p style="color: rgb(137, 114, 158);">For your travel itinerary (food, activites, etc.)</p>     
 </body>
+</div>
 </html>
 
 <style>
     .body {
-    background-color: lightblue;
+    background-color: rgba(94, 123, 239, 0.894);
 }
 .container {
 width: 800px;
