--- a/index.html
+++ b/index.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        body {
+            background-color: rgb(240, 139, 183);
+        }
+        .container {
+        width: 800px;
+        margin: 0 auto;  
+        border: 50 px #51163e;
+        background-color: lightpink;
+        display: inline;
+        }
+        ul {
+          list-style-type: none;
+          margin: 50;
+          padding: 0;
+          overflow: hidden;
+          background-color: #a12b73;
+          display: inline;
+          text-align: center;
+        }
+          li {
+          float: left;
+        }
+        
+        li a {
+          display: block;
+          color: rgb(207, 60, 121);
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+        }
+        </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Projects Home Paage</title>
+    <title>CSS Styling!!</title>
 </head>
-<body>
-    <p><a href="favorite _thing/index.html"> First HW </a></p>
+    <ul style="text-align: center;">
+  <li><a href="index.html">Home Page</a></li>
+    
+  <li><a href="favorite _thing/index.html"> First HW </a></li>
 
-    <p><a href="multipage_website/index.html">How to make nav bar</a></p>
+   <li><a href="multipage_website/index.html">How to make nav bar</a></li>
 
-    <p><a href="fonts_matter/">Using different fonts family </a></p>
+    <li><a href="fonts_matter/">Using different fonts family </a></li>
 
-  <p><a href="my genius/html/index.html">First MA Project</a></p>
+  <li><a href="my genius/html/index.html">First MA Project</a></li>
+</ul>
+
+<body style="text-align: center;">
+<h1 style="color: rgb(113, 27, 83);">Web Home Page!!</h1>
+<h2 style="color: #51163e;">This is the home page to find all my websites</h2>
+<a href="https://github.com/sahmedd123/WEBDesign1">Also here is the link to my repository!!</a>
+<img src="images/travel_4.jpg">
+</div>
 </body>
 </html>
+
+
+
