--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Styling!!</title>
 </head>
+
+<body style="text-align: center;">
     <ul style="text-align: center;">
   <li><a href="index.html">Home Page</a></li>
     
@@ -48,13 +50,12 @@
 
   <li><a href="my genius/html/index.html">First MA Project</a></li>
 </ul>
+<br>
 
-<body style="text-align: center;">
-<h1 style="color: rgb(113, 27, 83);">Web Home Page!!</h1>
+<h1 style="color: rgb(113, 27, 83); text-align: center;" >Web Home Page!!</h1>
 <h2 style="color: #51163e;">This is the home page to find all my websites</h2>
 <a href="https://github.com/sahmedd123/WEBDesign1">Also here is the link to my repository!!</a>
 <img src="images/travel_4.jpg">
-</div>
 </body>
 </html>
 
