--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <li><a href="fonts_matter/">Using different fonts family </a></li>
 
   <li><a href="my genius/html/index.html">First MA Project</a></li>
+
+  <li><a href="js.demo/index.html">Javascript Demo</a></li>
 </ul>
 <br>
 
