--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
   <li><a href="js.demo/index.html">Javascript Demo</a></li>
 </ul>
 <br>
-
+<div>
 <h1 style="color: rgb(113, 27, 83); text-align: center;" >Web Home Page!!</h1>
 <h2 style="color: #51163e;">This is the home page to find all my websites</h2>
 <a href="https://github.com/sahmedd123/WEBDesign1">Also here is the link to my repository!!</a>
 <img src="images/travel_4.jpg">
 </body>
+</div>
 </html>
 
 
