adding bootstrap to index

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
   <li><a href="my genius/html/index.html">First MA Project</a></li>
 
   <li><a href="js.demo/index.html">Javascript Demo</a></li>
+
+  <li><a href="bootstrap_demo/index.html">Bootstrap Demo</a></li>
 </ul>
 <br>
 <div>
