--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
   <li><a href="js.demo/index.html">Javascript Demo</a></li>
 
   <li><a href="bootstrap_demo/index.html">Bootstrap Demo</a></li>
+  
+  <li><a href="final_project/index.html">Final Project</a></li>
 </ul>
 <br>
 <div>
