--- a/final_project/index.html
+++ b/final_project/index.html
@@ -5,12 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seven Hills Ultimate - Home Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wjw8bnz.css">
 </head>
+<style>
+   body {
+font-family: "new-zen", sans-serif;
+font-weight: 400;
+font-style: normal;
+}
+
+ h1 {
+    font-family: "new-zen", sans-serif;
+    font-weight: 1000;
+    font-style: normal;  
+}
+
+em {
+    font-family: "new-zen", sans-serif;
+font-weight: 700;
+font-style: italic;
+}
+</style>
 <body>
      <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="mission.html">Misson</a></li>
 <li><a href="tryout.html">Tryouts</a></li>
+<li href="program.html"><a>Programs</a></li>
 <li><a href="coaches.html">Coaches</a></li>
     </ul>
 
