--- a/final_project/program.html
+++ b/final_project/program.html
@@ -1,4 +1,124 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tryouts</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wjw8bnz.css">
+    <style>
+          body {
+font-family: "new-zen", sans-serif;
+font-weight: 400;
+font-style: normal;
+}
 
- 
+ h1 {
+    font-family: "new-zen", sans-serif;
+    font-weight: 1000;
+    font-style: normal;  
+}
 
+em {
+    font-family: "new-zen", sans-serif;
+font-weight: 700;
+font-style: italic;
+}
+
+.grid-container {
+display: grid;
+grid-gap: 10px;
+grid-template-columns: auto auto 25%;
+}
+
+.grid-item {
+background-color: rgb(153, 186, 215);
+text-align: center;
+font-size: 30px;
+padding: 20px;
+}
+
+.navmenu {
+grid-row: 1;
+grid-column: 1 / span 3;
+}
+
+.main-image {
+grid-column: 1/ span 3;
+grid-row: 2;
+}
+
+.main1 {
+    grid-column: 1 / span 2;
+grid-row: 3;
+}
+
+.main2 {
+    grid-column: 1 / span 2;
+grid-row: 4
+}
+
+.sidenav {
+grid-column: 3;
+grid-row: 3 / span 2;
+}
+    </style>
+</head>
+<body>
+    <div>
+     <ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="mission.html">Misson</a></li>
+<li <a href="program.html">Programs</a></li>
+<li><a href="tryout.html">Tryouts</a></li>
+<li><a href="coaches.html">Coaches</a></li>
+    </ul>
+    <div class="title2"><h1>Programs</h1></div>
+       
+<div class="grid-item main1" style="text-align: center; color: rgb(4, 33, 74);">
+    <img src="images/winterseasonstuff.webp">
+</div>        
+<div class="grid-item main2" style="text-align: center; color: rgb(4, 33, 74);">
+    <h2>Winter Season Programming</h2>
+    <p>
+        Weekly practices focused on individual skill and team development. Teams practice one time per week. The season culminates with a local tournament.
+<br>
+Tryouts: November
+Season: December through March
+<br>
+10 total teams, 5 per division
+6 high school level
+4 middle school level
+22-24 players per team
+<br>
+Cost: ~$450. FA always available for those in need.
+    </p>
+    </div>    
+<div class="grid-item sidenav" style="text-align: center; color: rgb(4, 33, 74);" >
+    <h2>Summer Season Programming</h2>
+    Players selected for this program train three times per week in preparation for USAUltimate's Youth Club Championships. This is a national title event in which Seven Hills competes against teams from across the country.
+<br>
+    Tryouts: Late May-Early June
+    Season: June to August
+    <br>
+    Teams: the number of teams we send can vary year to year based on the bids we are awarded. In 2022, 7Hills sent five teams:
+    U20 Mixed (placed 1st)
+    U20 Gx (placed 5th)
+    U20 Open (placed 9th)
+    U17 Gx (placed 1st)
+    U17 Open (placed 5th)
+    <br>
+    Cost: ~$2000. Can vary based on flight costs. FA always available to those in need.
+    <br>
+    Middle School Level Players
+    Club leagues ran in partnership with DiscNW for U11/U13/U15 age groups. Mixed gender teams focused on gender equity. Once a week. 6-8 weeks long.
+    
+   
+</div>    
+</ul>
+         </div>
+         <div class="footer">
+            Created by &copy; Ahmed and WebDesign Class Fall 2023
+         </div>
+</body>
+</html>
