--- a/final_project/mission.html
+++ b/final_project/mission.html
@@ -5,9 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seven Hills Ultimate - Mission</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wjw8bnz.css">
 </head>
 <style>
-        
+    body {
+font-family: "new-zen", sans-serif;
+font-weight: 400;
+font-style: normal;
+}
+
+ h1 {
+    font-family: "new-zen", sans-serif;
+    font-weight: 1000;
+    font-style: normal;  
+}
+
+em {
+    font-family: "new-zen", sans-serif;
+font-weight: 700;
+font-style: italic;
+}
+  
     .grid-container {
     display: grid;
     grid-gap: 10px;
@@ -51,6 +69,7 @@
      <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="mission.html">Misson</a></li>
+<li><a href="program.html">Programs</a></li>
 <li><a href="tryout.html">Tryouts</a></li>
 <li><a href="coaches.html">Coaches</a></li>
     </ul>
