--- a/final_project/tryout.html
+++ b/final_project/tryout.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tryouts</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wjw8bnz.css">
     <style>
-        
+          body {
+font-family: "new-zen", sans-serif;
+font-weight: 400;
+font-style: normal;
+}
+
+ h1 {
+    font-family: "new-zen", sans-serif;
+    font-weight: 1000;
+    font-style: normal;  
+}
+
+em {
+    font-family: "new-zen", sans-serif;
+font-weight: 700;
+font-style: italic;
+}
+
 .grid-container {
 display: grid;
 grid-gap: 10px;
@@ -51,7 +69,7 @@ grid-row: 3 / span 2;
      <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="mission.html">Misson</a></li>
-<li href="program.html"><a>Programs</a></li>
+<li><a href="program.html">Programs</a></li>
 <li><a href="tryout.html">Tryouts</a></li>
 <li><a href="coaches.html">Coaches</a></li>
     </ul>
