all done actually

--- a/final_project/program.html
+++ b/final_project/program.html
@@ -113,6 +113,8 @@ Cost: ~$450. FA always available for those in need.
     Middle School Level Players
     Club leagues ran in partnership with DiscNW for U11/U13/U15 age groups. Mixed gender teams focused on gender equity. Once a week. 6-8 weeks long.
     
+    <div class="grid-item main1" style="text-align: center; color: rgb(4, 33, 74);">
+        <img src="images/winterseasonstuff.webp">
    
 </div>    
 </ul>
