--- a/final_project/program.html
+++ b/final_project/program.html
@@ -69,7 +69,7 @@ grid-row: 3 / span 2;
      <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="mission.html">Misson</a></li>
-<li <a href="program.html">Programs</a></li>
+<li><a href="program.html">Programs</a></li>
 <li><a href="tryout.html">Tryouts</a></li>
 <li><a href="coaches.html">Coaches</a></li>
     </ul>
